2.4.1

 *) Return NOT_FOUND (404) or FORBIDDEN (403) instead of 
    INTERNAL_SERVER_ERROR (500) when there are configuration issues
    or the script does't exist.  Suggested by Jeff Lawson [bovine@ud.com].

2.4.0

 *) [*nix Security] - When FastCgiWrapper (FastCgiSuexec) was in use 
    and a vhost configured to use the same uid/gid as the main
    server, mod_fastcgi would not bother using the wrapper (suexec)
    because its effective uid/gid was already appropriate.  This is
    consistent with Apache's v1.3 mod_cgi behaviour.  There are two
    problems with this approach:  1) when FastCgWrapper is in use 
    mod_fastcgi's process manager keeps its root privileges (as its
    real uid/gid) so it can terminate the applications its starts -
    this privilege was being passed to applications when the use of 
    the wrapper was bypassed  2) wrappers are often employed to
    perform functionality beyond setting the uid/gid - by not calling
    the wrapper under certain circumstances, application invocation
    environments were inconsistent.  With this change, the wrapper is
    always used (when enabled) under both Apache 1.3 and 2.
    Reported by Michael Richards [michael@fastmail.ca].

 *) [*nix/AP2] Use the vhost uid/gid instead of the server uid/gid
    for dynamic application invocation when the FastCgiWrapper is in use.
    Reported by Michael Richards [michael@fastmail.ca]

 *) [*nix] Fix handling of FastCgiWrapper when passed a real path,
    i.e. other than "on" or "off".  Michael Richards [michael@fastmail.ca]

 *) Eliminate the logging of "incomplete headers (0 bytes) received from 
    server" when a client aborts. 

 *) [WIN32] Fix a delay in handling large POSTs to named pipe based
    servers. Philip Gladstone [philip@okena.com]

 *) [*nix/AP2] Prevent the module from being initalized twice at startup
    (resulting in confusing error messages to the log).

 *) Eliminate the need for SetHandler or AddHandler with static or 